[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "perspective_diff_sync"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync"

[dependencies]
derive_more = "0"
serde = "1"
lazy_static = "*"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
thiserror = "1.0.20"
petgraph = "0.6.2"
maplit = "1.0.2"
graphviz-rust = "0.2.1"
dot-structures = "0.1.0"
itertools = "0.10.3"
perspective_diff_sync_integrity = { path = "../perspective_diff_sync_integrity" }
sha2 = "0.10.5"
hdk = { version = "0.3.0-beta-dev.31" , git = "https://github.com/coasys/holochain.git", rev = "6e0d5db22aca543c1ab217ea5edbb4d57376cde3"}
holo_hash = { version = "0.3.0-beta-dev.21", git = "https://github.com/coasys/holochain.git", rev = "6e0d5db22aca543c1ab217ea5edbb4d57376cde3"}

[features]
test = []