[package]
authors = ["josh@junto.foundation"]
edition = "2021"
name = "perspective_diff_sync"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync"

[dependencies]
derive_more = "0"
serde = "1.0.198"
lazy_static = "*"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
thiserror = "1.0.20"
petgraph = "0.6.2"
maplit = "1.0.2"
graphviz-rust = "0.2.1"
dot-structures = "0.1.0"
itertools = "0.10.3"
perspective_diff_sync_integrity = { path = "../perspective_diff_sync_integrity" }
sha2 = "0.10.5"
hdk = { version = "0.4.0-dev.16", git = "https://github.com/coasys/holochain.git", rev = "90275334e5cc766bfda2b3610deb28fada77ed1d" }
holo_hash =  { version = "0.4.0-dev.11", git = "https://github.com/coasys/holochain.git", rev = "90275334e5cc766bfda2b3610deb28fada77ed1d" }

[features]
test = []