[package]
authors = ["josh@junto.foundation"]
edition = "2021"
name = "perspective_diff_sync"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync"

[dependencies]
derive_more = "0"
serde = "1.0.198"
lazy_static = "*"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
thiserror = "1.0.20"
petgraph = "0.6.2"
maplit = "1.0.2"
graphviz-rust = "0.2.1"
dot-structures = "0.1.0"
itertools = "0.10.3"
perspective_diff_sync_integrity = { path = "../perspective_diff_sync_integrity" }
sha2 = "0.10.5"
hdk = { version = "0.3.2-rc.1", git = "https://github.com/coasys/holochain.git", rev = "10841e49b28c17c3cb428680e2bc9259bf4ec739" }
holo_hash =  { version = "0.3.2-rc.1", git = "https://github.com/coasys/holochain.git", rev = "10841e49b28c17c3cb428680e2bc9259bf4ec739" }

[features]
test = []