[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "perspective_diff_sync_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync_integrity"

[dependencies]
derive_more = "0"
serde = "1"
chrono = { version = "0.4.31", default-features = false, features = ["clock", "std", "oldtime", "serde"] }

holo_hash =  { version = "0.3.1-rc.0", git = "https://github.com/coasys/holochain.git", rev = "173bc41e3df1cb3f7723d92e3feb5cea94ae00ac" }
hdi = { version = "0.4.1-rc.0", git = "https://github.com/coasys/holochain.git", rev = "173bc41e3df1cb3f7723d92e3feb5cea94ae00ac" }
hdk = { version = "0.3.1-rc.0", git = "https://github.com/coasys/holochain.git", rev = "173bc41e3df1cb3f7723d92e3feb5cea94ae00ac" }