[package]
authors = ["josh@junto.foundation"]
edition = "2021"
name = "perspective_diff_sync_integrity"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync_integrity"

[dependencies]
derive_more = "0"
serde = "1.0.198"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }

holo_hash =  { version = "0.4.0-dev.11", git = "https://github.com/coasys/holochain.git", rev = "90275334e5cc766bfda2b3610deb28fada77ed1d" }
hdi = { version = "0.5.0-dev.14", git = "https://github.com/coasys/holochain.git", rev = "90275334e5cc766bfda2b3610deb28fada77ed1d" }
hdk = { version = "0.4.0-dev.16", git = "https://github.com/coasys/holochain.git", rev = "90275334e5cc766bfda2b3610deb28fada77ed1d" }