[package]
authors = ["josh@junto.foundation"]
edition = "2018"
name = "perspective_diff_sync"
version = "0.0.1"

[lib]
crate-type = ["cdylib", "rlib"]
name = "perspective_diff_sync"

[dependencies]
derive_more = "0"
serde = "1.0.198"
lazy_static = "*"
chrono = { version = "0.4.38", default-features = false, features = ["clock", "std", "oldtime", "serde"] }
thiserror = "1.0.20"
petgraph = "0.6.2"
maplit = "1.0.2"
graphviz-rust = "0.2.1"
dot-structures = "0.1.0"
itertools = "0.10.3"
perspective_diff_sync_integrity = { path = "../perspective_diff_sync_integrity" }
sha2 = "0.10.5"
hdk = { version = "0.4.0-dev.9", git = "https://github.com/coasys/holochain", rev = "60b035888f15b9989e2852f6399f692fb73f5a7e" }
holo_hash = { version = "0.4.0-dev.7", git = "https://github.com/coasys/holochain", rev = "60b035888f15b9989e2852f6399f692fb73f5a7e"}

[features]
test = []